--- a/youtube.css
+++ b/youtube.css
@@ -153,3 +153,251 @@ html , body{
     font-size:25px;
     color:rgb(104, 104, 245);
 }
+#sidebar{
+    width:210px;
+    height:90%;
+    padding:5px 5px;
+}
+#s1{
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color:rgb(243, 238, 238);
+    transition:0.1s;
+}
+#s1:hover{
+    transition:0.1s;
+    background-color:rgb(236, 230, 230);
+    cursor: pointer;
+}
+#s1 i{
+    font-size:23px;
+}
+#s2{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+}
+#s2:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s2 i{
+    font-size:23px;
+}
+#s3{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s3:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s3 i{
+    font-size:23px;
+}
+#s4{
+    margin-top: 5px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+}
+#s4:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s4 i{
+    font-size:23px;
+}
+#s5{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s5:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s5 i{
+    font-size:23px;
+}
+#l1{
+    margin-top: 5px;
+    font-size:14px;
+}
+#sign{
+    margin-top: 10px;
+    margin-left: 10px;
+    width:100px;
+    height:35px;
+    border:1px solid rgb(211, 206, 206);
+    display: flex;
+    align-items: center;
+    gap:5px;
+    padding:10px 10px;
+    border-radius: 20px;
+    color:rgb(68, 68, 247);
+    font-weight: bold;
+    font-size:13px;
+    transition:0.1s;
+    margin-bottom: 15px;
+}
+#sign:hover{
+    transition:0.1s;
+    cursor: pointer;
+    background-color: rgb(223, 223, 243);
+}
+#sign i{
+    font-size:25px;
+    color:rgb(104, 104, 245);
+}
+h5{
+    font-size:15px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+#s6{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s6:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s6 i{
+    font-size:23px;
+}
+#s7{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s7:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s7 i{
+    font-size:23px;
+}
+#s8{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s8:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s8 i{
+    font-size:23px;
+}
+#s9{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s9:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s9 i{
+    font-size:23px;
+}
+#s10{
+    margin-top: 2px;
+    width:100%;
+    height:40px;
+    padding:10px 10px;
+    display: flex;
+    align-items: center;
+    font-size:14px;
+    gap:20px;
+    border-radius: 10px;
+    transition:0.1s;
+    margin-bottom: 5px;
+}
+#s10:hover{
+    transition:0.1s;
+    background-color:rgb(243, 238, 238);
+    cursor: pointer;
+}
+#s10 i{
+    font-size:23px;
+}
